fixed spacing on about page, added emoticons to nav across all pages

--- a/styles/style.css
+++ b/styles/style.css
@@ -7,21 +7,25 @@ body {
 header {
     display: block;
     justify-content: center;
-    margin: 0 auto;
-
-
+    /* margin: 0 auto; */
 }
 
 h1 {
-    /* text-decoration: none; */
     text-align: center;
     font-size: 10vw;
     margin: 5px;
 }
 
-p {
-    line-height: 150%;
+h2 {
+    font-size: 20px;
+    font-weight:bold;
+    margin: 5;
+}
 
+p {
+    font-size: 17px;
+    line-height: 150%;
+    margin: 0;
 }
 
 nav {
@@ -29,10 +33,8 @@ nav {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    
-
-    /* flex-direction: column; */
 }
+
 a:link {
     text-decoration: none;
 }
@@ -43,15 +45,13 @@ a:hover, h1:hover {
 
 
 section {
-    font-size: 16px;
-    width: 90%;
-    height: 50%;
-    margin: 0 auto;
-}
-
-h2 {
-    /* color:red; */
-    font-style: normal;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    /* border: 5px solid #FFFF00; */
+    padding: 10px;
+    width: 40vw;
 }
 
 img {
@@ -66,36 +66,5 @@ img {
     margin: 0 auto;
 }
 
-/* .flex-child {
-    flex: 1;
-    border: 2px solid red;
-    margin-right: 20px;
-} */
 
-/* .flex-child:first-child {
-    margin-right: 20px;
-} */
-/* .container {
-    height: 100%;
-    width: 100%;
-  /*  Section 1: Add flex  */
-    /* display: flex;
-    
-  /*  Section 2: controlling flow  */
-    /* flex-direction: row;
-    justify-content: center; */ 
-    
-  /*  Section 3: controlling wrap  */
-    /* flex-wrap: wrap;   */
-/* } */
-/* .container {
-    border: red 2px dotted;
-    max-height: 500px;
-}
-
-.container>div {
-    min-width: 50px;
-    min-height: 50px;
-    border-right: lightblue 2px solid;
-} */
 
